<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_phone"
        android:name="Fragments.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_laptop"
        android:name="Fragments.LaptopFragment"
        android:label="@string/title_laptop"
        tools:layout="@layout/fragment_laptop" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="Fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>