<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.HomeFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager_slide"
            android:layout_width="match_parent"
            android:layout_height="170dp" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/circle"
            app:ci_drawable="@color/circle_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-30dp"
            />
        <androidx.cardview.widget.CardView
            android:layout_marginTop="8dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <LinearLayout
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_qr_code_24"/>
                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/gray"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp">
                        <ImageView
                            android:scaleType="centerCrop"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_pay_35" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_pay"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/link_pay_malth"
                        android:textSize="10sp"/>
                </LinearLayout>
                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="@color/gray"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp">
                        <ImageView
                            android:scaleType="centerCrop"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_coins" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_login"
                        android:textSize="10sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_option"
            android:padding="10dp"
            android:background="@drawable/bg_option"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="-15dp"
            tools:listitem="@layout/item_option"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            />
        <LinearLayout
            android:layout_margin="5dp"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <ImageView
                android:id="@+id/img_start_banner"
                android:scaleType="centerCrop"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/img_center_banner"
                android:scaleType="centerCrop"
                android:layout_width="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/img_end_banner"
                android:scaleType="centerCrop"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:background="#D3D3D3"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Sản phẩm khuyến mãi"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_more_sproduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_more"
                    android:gravity="end"
                    android:paddingRight="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_special_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_special_product"
                />
            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp">

                        <TextView
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Thương hiệu"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_more_brand"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_more"
                            android:gravity="end"
                            android:paddingRight="5dp"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_brand_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_brand_product"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp">

                        <TextView
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Linh kiện"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_more_component"
                            android:layout_gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_more"
                            android:textSize="10sp"
                            android:gravity="end"
                            android:paddingRight="5dp"
                            />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_component_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_component_product"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:weightSum="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:text="MIỄN PHÍ VẬN CHUYỂN"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/bg_free_voucher"
                    />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#8E8A8A"
                    android:layout_marginRight="5dp"/>
                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
                    <TextView
                        android:padding="4dp"
                        android:background="@drawable/bg_text_voucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="left"
                        android:text="Đơn từ 0Đ"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:textSize="10sp"
                        android:layout_gravity="left"
                        android:layout_height="wrap_content"
                        android:text="Đơn hàng đầu tiên tại Malth Shop"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:padding="3dp"
                            android:background="@drawable/bg_text_voucher_under"
                            android:textColor="#E8C231"
                            android:layout_width="wrap_content"
                            android:textSize="10sp"
                            android:layout_height="wrap_content"
                            android:text="Tối đa 20K và 40K"/>
                        <TextView
                            android:padding="3dp"
                            android:textColor="#E8C231"
                            android:textSize="10sp"
                            android:background="@drawable/bg_text_voucher_under"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Người mới"
                            android:layout_marginLeft="10dp"
                            />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_Save_Voucher"
                    android:layout_width="26dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FF5858"
                    android:text="Lưu" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginTop="10dp"
            android:id="@+id/viewpager_sub_slide"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_width="match_parent"
            android:layout_height="130dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sản phẩm nổi bật"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/black"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_Featured_Product"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>